# FiveFingerControl

./: README.md
hand_angle_ws/install/: local_setup.sh  setup.sh
hand_angle_ws/install/hand_angle/lib/hand_angle/: hand_angle_node
hand_angle_ws/install/hand_angle/share/hand_angle/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
hand_angle_ws/install/hand_angle/share/hand_angle/cmake/: hand_angleConfig.cmake
hand_angle_ws/log/: latest_build
hand_angle_ws/src/hand_angle/: CMakeLists.txt
hand_angle_ws/src/hand_angle/include/hand_angle/: UDEServer.h
hand_angle_ws/src/hand_angle/libs/: UDEServer.cpp
hand_angle_ws/src/hand_angle/src/: hand_angle_node.cpp
hand_control_ws/install/: local_setup.sh  setup.sh
hand_control_ws/install/hand_control/lib/hand_control/: hand_control_node  hand_control_node2  keyboard_publisher
hand_control_ws/install/hand_control/share/ament_index/resource_index/package_run_dependencies/: hand_control
hand_control_ws/install/hand_control/share/ament_index/resource_index/parent_prefix_path/: hand_control
hand_control_ws/install/hand_control/share/hand_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
hand_control_ws/install/hand_control/share/hand_control/cmake/: ament_cmake_export_dependencies-extras.cmake  hand_controlConfig-version.cmake  hand_controlConfig.cmake
hand_control_ws/install/hand_control/share/hand_control/environment/: ament_prefix_path.dsv  path.dsv
hand_control_ws/log/: latest_build
hand_control_ws/src/hand_control/: CMakeLists.txt
hand_control_ws/src/hand_control/src/: hand_control_node.cpp  hand_control_node2.cpp  keyboard_publisher.cpp
